// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delete branch modal Deleting a protected branch (for owner or maintainer) renders the modal correctly 1`] = `
"<div visible=\\"visible\\">
  <gl-alert-stub title=\\"\\" dismisslabel=\\"Dismiss\\" variant=\\"danger\\" primarybuttonlink=\\"\\" primarybuttontext=\\"\\" secondarybuttonlink=\\"\\" secondarybuttontext=\\"\\" class=\\"gl-mb-5\\">
    <div data-testid=\\"modal-message\\">
      <gl-sprintf-stub message=\\"You're about to permanently delete the protected branch %{strongStart}test_modal.%{strongEnd}\\"></gl-sprintf-stub>
      <p class=\\"gl-mb-0 gl-mt-4\\">
        This branch hasn’t been merged into default. To avoid data loss, consider merging this branch before deleting it.
      </p>
    </div>
  </gl-alert-stub>
  <form action=\\"/path/to/branch\\" method=\\"post\\">
    <div class=\\"gl-mt-4\\">
      <p>
        <gl-sprintf-stub message=\\"Once you confirm and press %{strongStart}Yes, delete protected branch,%{strongEnd} it cannot be undone or recovered.\\"></gl-sprintf-stub>
      </p>
      <p>
        <gl-sprintf-stub message=\\"Please type the following to confirm:\\"></gl-sprintf-stub> <code class=\\"gl-white-space-pre-wrap\\"> test_modal </code>
        <b-form-input-stub name=\\"delete_branch_input\\" value=\\"\\" autocomplete=\\"off\\" debounce=\\"0\\" type=\\"text\\" aria-labelledby=\\"input-label\\" class=\\"gl-form-input gl-mt-4\\"></b-form-input-stub>
      </p>
    </div> <input type=\\"hidden\\" name=\\"_method\\" value=\\"delete\\"> <input type=\\"hidden\\" name=\\"authenticity_token\\">
  </form>
  <div class=\\"gl-display-flex gl-flex-direction-row gl-justify-content-end gl-flex-wrap gl-m-0\\">
    <b-button-stub size=\\"md\\" variant=\\"default\\" type=\\"button\\" tag=\\"button\\" class=\\"gl-button\\">
      <!---->
      <!----> <span class=\\"gl-button-text\\">
        Cancel, keep branch
      </span></b-button-stub>
    <div class=\\"gl-mr-3\\"></div>
    <b-button-stub disabled=\\"true\\" size=\\"md\\" variant=\\"danger\\" type=\\"button\\" tag=\\"button\\" data-qa-selector=\\"delete_branch_confirmation_button\\" data-testid=\\"delete_branch_confirmation_button\\" class=\\"gl-button\\">
      <!---->
      <!----> <span class=\\"gl-button-text\\">Yes, delete protected branch</span></b-button-stub>
  </div>
</div>"
`;

exports[`Delete branch modal Deleting a regular branch renders the modal correctly 1`] = `
"<div visible=\\"visible\\">
  <gl-alert-stub title=\\"\\" dismisslabel=\\"Dismiss\\" variant=\\"danger\\" primarybuttonlink=\\"\\" primarybuttontext=\\"\\" secondarybuttonlink=\\"\\" secondarybuttontext=\\"\\" class=\\"gl-mb-5\\">
    <div data-testid=\\"modal-message\\">
      <gl-sprintf-stub message=\\"You're about to permanently delete the branch %{strongStart}test_modal.%{strongEnd}\\"></gl-sprintf-stub>
      <p class=\\"gl-mb-0 gl-mt-4\\">
        This branch hasn’t been merged into default. To avoid data loss, consider merging this branch before deleting it.
      </p>
    </div>
  </gl-alert-stub>
  <form action=\\"/path/to/branch\\" method=\\"post\\">
    <div>
      <p class=\\"gl-mt-4\\">
        <gl-sprintf-stub message=\\"Deleting the %{strongStart}test_modal%{strongEnd} branch cannot be undone. Are you sure?\\"></gl-sprintf-stub>
      </p>
    </div> <input type=\\"hidden\\" name=\\"_method\\" value=\\"delete\\"> <input type=\\"hidden\\" name=\\"authenticity_token\\">
  </form>
  <div class=\\"gl-display-flex gl-flex-direction-row gl-justify-content-end gl-flex-wrap gl-m-0\\">
    <b-button-stub size=\\"md\\" variant=\\"default\\" type=\\"button\\" tag=\\"button\\" class=\\"gl-button\\">
      <!---->
      <!----> <span class=\\"gl-button-text\\">
        Cancel, keep branch
      </span></b-button-stub>
    <div class=\\"gl-mr-3\\"></div>
    <b-button-stub size=\\"md\\" variant=\\"danger\\" type=\\"button\\" tag=\\"button\\" data-qa-selector=\\"delete_branch_confirmation_button\\" data-testid=\\"delete_branch_confirmation_button\\" class=\\"gl-button\\">
      <!---->
      <!----> <span class=\\"gl-button-text\\">Yes, delete branch</span></b-button-stub>
  </div>
</div>"
`;
